// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table Cliente {
    Tipo TEXT 
    FechaAlta DATE 
    TipoCliente TEXT 
    DNI_CIF TEXT 
    BIC TEXT 
    IBAN TEXT 
    NCuenta INTEGER [primary key]
    NombreCorto TEXT 
    NombreCompleto TEXT 
    Calle TEXT 
    ExtCalle TEXT 
    Localidad TEXT 
    Provincia TEXT 
    CodPostal TEXT 
    Tlf TEXT 
    Email TEXT 
    Web TEXT 
    FPago TEXT 
    CC TEXT 
    DtoGl TEXT 
    NCopFact TEXT 
    Contacto TEXT 
    Recomendado TEXT 
    Comentarios TEXT 
    Notific TEXT 
    DeBaja TEXT 
    FechaBaja DATE 
    CreadorPor TEXT 
    SumaVentas DECIMAL 
    PuntosGenerados INTEGER 
    PuntosUsados INTEGER 
    SaldoParaPuntos DECIMAL 
    }

Table ComprasCAB {
    SerieNumero VARCHAR(11) 
    Fecha DATETIME 
    RazonSocial TEXT 
    BaseImponible DECIMAL 
    ImporteIVA DECIMAL 
    ImporteRecargoEq DECIMAL 
    TotalAlbCompra DECIMAL 
    idCabCompras INTEGER [primary key]
    ImporteIVAReducido DECIMAL 
    ImporteIVASuperReducido DECIMAL 
    ImporteIVAAceitesPastas DECIMAL 
    BaseIVAReducido DECIMAL 
    BaseIVASuperReducido DECIMAL 
    BaseIVAAceitesPastas DECIMAL 
    BaseIVACero DECIMAL 
    ImporteIVAGeneral DECIMAL 
    BaseIVAGeneral DECIMAL 
    TotalAlbCalculado DECIMAL 
    tpcDtoProntoPago DECIMAL 
    tpcDtoGlobal DECIMAL 
    Tienda TEXT 
    NoCuentaProveedor INTEGER 
    idTienda SMALLINT 
    }

Table Proveedor {
    DNICIF TEXT 
    RSocial TEXT 
    TipoProv TEXT 
    FPago TEXT 
    Facturacion TEXT 
    Provincia TEXT 
    NoCuenta INTEGER [primary key]
    Calle TEXT 
    ExtCalle TEXT 
    Localidad TEXT 
    CPost INTEGER 
    E_mail TEXT 
    Web TEXT 
    BIC TEXT 
    IBAN TEXT 
    CC TEXT 
    Tlf1 TEXT 
    Tlf2 TEXT 
    Movil INTEGER 
    Fax TEXT 
    Contacto TEXT 
    Comentarios TEXT 
    Notific TEXT 
    Debaja TEXT 
    }

Table Tienda {
    idTienda SMALLINT [primary key]
    nombreTienda VARCHAR(20) 
    }

Table ComprasLIN {
    Tienda TEXT 
    NumeroAlbaran INTEGER 
    AlbaranCompra VARCHAR(11) 
    NombreProveedor TEXT 
    FechaAlbaran DATETIME 
    ImporteAlbaran DECIMAL 
    ReferenciaProducto INTEGER 
    OLDReferenciaProducto TEXT 
    DescripciondelProducto TEXT 
    CodigodeBarras BIGINT 
    Cantidad INTEGER 
    PVPProducto DECIMAL 
    PrecioLinea DECIMAL 
    tpcIVA DECIMAL 
    tpcDescuento1 DECIMAL 
    tpcDescuento2 DECIMAL 
    tpcDescuento3 DECIMAL 
    tpcDescuento4 DECIMAL 
    tpcDtoGlobal DECIMAL 
    tpcDtoProntoPago DECIMAL 
    id INTEGER [primary key]
    Importe DECIMAL 
    NoCuentaProveedor INTEGER 
    CantidadConCoste INTEGER 
    CantidadGratis INTEGER 
    PrecioCoste DECIMAL 
    Lote VARCHAR(20) 
    idTienda SMALLINT 
    FechaInventario DATETIME 
    }

Table Producto {
    Referencia INTEGER [primary key]
    Descripcion TEXT 
    DescripcionBreve TEXT 
    CodBarras TEXT 
    CodGenerico TEXT 
    FechaCreacion TEXT 
    PVP FLOAT 
    PrecioCoste FLOAT 
    Familia TEXT 
    SubFam TEXT 
    Stock FLOAT 
    Ubicacion TEXT 
    IVA TEXT 
    Marca TEXT 
    Proveedor TEXT 
    Descatalogado TEXT 
    PublicarWeb TEXT 
    OfertaWeb TEXT 
    NovedadWeb TEXT 
    tipoIVA SMALLINT 
    FechaUltPVP DATETIME 
    }

Table StockTienda {
    ID INTEGER 
    Tienda VARCHAR(20) 
    Referencia INTEGER [primary key]
    Marca TEXT 
    Producto TEXT 
    UltimaVenta DATE 
    UltimaCompra DATE 
    Unidades FLOAT 
    PrecioCoste FLOAT 
    PrecioCosteConIVA FLOAT 
    PrecioCosteConIVA_Recargo FLOAT 
    PCM FLOAT 
    PCMconIVA FLOAT 
    PCMconIVA_Recargo FLOAT 
    PVP FLOAT 
    PVPsinIVA FLOAT 
    idTienda SMALLINT 
    StockInicial INTEGER 
    Entradas INTEGER 
    Salidas INTEGER 
    Stock INTEGER 
    FechaInventario DATETIME 
    }

Table TraspasosLIN {
    Origen TEXT 
    Destino TEXT 
    Numero INTEGER [primary key]
    Producto TEXT 
    Cantidad INTEGER 
    FechaTraspaso DATETIME 
    PedidoProveedor TEXT 
    Referencia INTEGER 
    idOrigen SMALLINT 
    idDestino SMALLINT 
    }

Table VentasCAB {
    Usuario TEXT 
    Tienda TEXT 
    Serie TEXT 
    Numero INTEGER [primary key]
    VentaMostrador TEXT 
    FechaVenta DATETIME 
    ImporteTotal FLOAT 
    PrecioLinea FLOAT 
    NombreOferta TEXT 
    tpcDtoGlobal FLOAT 
    tpcDtoPP FLOAT 
    ImporteBruto FLOAT 
    FacturaSN TEXT 
    FechaFactura TEXT 
    NombreRazonSocialCliente TEXT 
    NombreComercialCliente TEXT 
    NCuentaCliente INTEGER 
    TipoCliente TEXT 
    NIFCliente TEXT 
    Telefono TEXT 
    ImporteIVASuperReducido FLOAT 
    ImporteIVAReducido FLOAT 
    ImporteIVAAceitesPastas FLOAT 
    ImporteIVAGeneral FLOAT 
    BaseIVACero FLOAT 
    BaseIVASuperReducido FLOAT 
    BaseIVAReducido FLOAT 
    BaseIVAAceitesPastas FLOAT 
    BaseIVAGeneral FLOAT 
    NumeroLineas INTEGER 
    TieneValesDto BIT 
    Puntos INTEGER 
    }

Table VentasLIN {
    id INTEGER [primary key]
    Usuario TEXT 
    Tienda TEXT 
    Serie TEXT 
    Numero INTEGER 
    VentaMostrador TEXT 
    FechaVenta DATETIME 
    Producto TEXT 
    CodigoBarras TEXT 
    RefProducto INTEGER 
    OLDRefProducto TEXT 
    StockCantidad FLOAT 
    FamiliaComercial TEXT 
    SubFamiliaComercial TEXT 
    Marca TEXT 
    CantidadVendida FLOAT 
    LoteVendido TEXT 
    FechaCaducidad TEXT 
    ImporteTotal FLOAT 
    PrecioLinea FLOAT 
    tpcIVA FLOAT 
    NombreOferta TEXT 
    tpcDtoLinea FLOAT 
    tpcDtoGlobal FLOAT 
    tpcDtoPP FLOAT 
    ImporteBruto FLOAT 
    FacturaSN TEXT 
    FechaFactura TEXT 
    NombreRazonSocialCliente TEXT 
    NombreComercialCliente TEXT 
    NCuentaCliente INTEGER 
    TipoCliente TEXT 
    NIFCliente TEXT 
    Telefono TEXT 
    idTienda SMALLINT 
    }



// Relationships
    Ref: ComprasCAB.(NoCuentaProveedor) < Proveedor.(NoCuenta)
    Ref: ComprasCAB.(idTienda) < Tienda.(idTienda)
    Ref: ComprasLIN.(AlbaranCompra) < ComprasCAB.(idCabCompras)
    Ref: ComprasLIN.(NoCuentaProveedor) < Proveedor.(NoCuenta)
    Ref: ComprasLIN.(ReferenciaProducto) < Producto.(Referencia)
    Ref: ComprasLIN.(idTienda, ReferenciaProducto) < StockTienda.(Referencia, Referencia)
    Ref: ComprasLIN.(idTienda) < Tienda.(idTienda)
    Ref: StockTienda.(Referencia) < Producto.(Referencia)
    Ref: StockTienda.(idTienda) < Tienda.(idTienda)
    Ref: TraspasosLIN.(idDestino, Referencia) < StockTienda.(Referencia, Referencia)
    Ref: TraspasosLIN.(Referencia, idOrigen) < StockTienda.(Referencia, Referencia)
    Ref: TraspasosLIN.(Referencia) < Producto.(Referencia)
    Ref: VentasLIN.(NCuentaCliente) < Cliente.(NCuenta)
    Ref: VentasLIN.(Numero) < VentasCAB.(Numero)
    Ref: VentasLIN.(RefProducto, idTienda) < StockTienda.(Referencia, Referencia)
    Ref: VentasLIN.(RefProducto) < Producto.(Referencia)
